www/style.css
html, body {
    height: 100%;
    width: 100%;
    background: #EEE;
    font-family: 'Open Sans', Arial;
    font-size: 14px;
    color: #333;
    overflow: hidden;
    margin: 0;
}

h1 {
    font-size: 36px;
}

input {
	outline: none;
}

div.contentContainer {
    height: 100%;
    width: 100%;
}

div.content {
    height: 100%;
    width: 100%;
    background-image: url('http://data.hdwallpapers.im/lines_abstract_background_point_scheme_background_free.jpg');
    background-size: cover;
    background-position: center center;
}

/* v PAGES v */

div.page {
    height: 100%;
    width: 100%;
}

div.page.menu {
    display: none;
}


div.page.chat {
    display: none;
}

/* ^ PAGES ^ */

/* v LOGIN PAGE v */

div.logoTopBar {
    height: 50px;
    width: 100%;
    background: rgba(255,255,255,0.9);
    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.75);
}

div.logoTopBar>img.companyLogo {
    height: 40px;
    margin-top: 6px;
    margin-left: 5px;
}

div.loginBox {
    height: 90%;
    max-height: 500px;
    width: 90%;
    max-width: 400px;
    display: inline-block;
    position: absolute;
    top: 70px;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    box-shadow: 0 0 5px rgba(33,33,33,0.4);
    background: rgba(250,250,250,0.96);
    border-radius: 5px;
}

div.loginBoxContainer {
    height: 96%;
    width: 96%;
    margin: 2%;
    text-align: center;
}

div.loginBoxContainer>img.companyLogo {
    height: 70px;
    margin: 5px auto;
    margin-bottom: 15px;
}

div.loginForm {
    height: 75%;
    width: 100%;
}

div.loginForm>div.formContainer {
    height: 100%;
    width: 80%;
    margin: 0 10%;
}

div.loginForm input {
    height: 52px;
    line-height: 52px;
    width: 100%;
    display: inline-block;
}

div.loginForm input.loginInput.textInput {
    display: block;
    margin: 10px 0px;
    font-size: 16px;
    border: none;
    background: none;
    border-bottom: 2px solid #AAA;
}

div.loginForm input.loginInput.textInput:hover {
    border-color: #7AADCC;
}

div.loginForm input.loginInput.textInput:active, div.loginForm input.loginInput.textInput:focus  {
    border-color: #4CB5F5;
    outline: none;
}

div.loginForm input.loginInput.loginButton {
    display: inline-block;
    background: #0C75C5;
    color: #FFF;
    font-size: 20px;
    opacity: 0.8;
    border: none;
    border-radius: 5px;
    margin: 4px 0;
    cursor: pointer;
    transition: 0.4s;
}

div.loginForm div.formContainer.posting input.loginInput.loginButton, 
div.loginForm div.formContainer.posting input.loginInput.loginButton:hover,
div.loginForm div.formContainer.posting input.loginInput.loginButton.create,
div.loginForm div.formContainer.posting input.loginInput.loginButton.create:hover {
    background: #999;
    opacity: 0.6;
    cursor: default;
}

div.loginForm input.loginInput.loginButton:hover {
    opacity: 1;
}

div.loginForm input.loginInput.loginButton.signIn {
    margin-top: 16px;
}

div.formContainer.login input.loginInput.loginButton.create {
    width: 76%;
    position: absolute;
    left: 12%;
    bottom: 10px;
    background: #BBB;
    color: #555;
    transition: 0.4s;
}

div.forgotPassword {
    margin-top: 12px;
    text-align: left;
}

div.forgotPassword>span {
    color: #4CB5F5;   
    cursor: pointer;
    transition: 0.4s;
}

div.forgotPassword>span:hover {
    color: #0C75C5;
}

div.loginForm div.backButton {
    height: 44px;
    line-height: 44px;
    width: 60%;
    position: absolute;
    border-radius: 5px;
    background: #0C75C5;
    color: #FFF;
    margin-left: 20%;
    font-size: 18px;
    opacity: 0.8;
    bottom: 8px;
    left: 0;
    cursor: pointer;
    text-align: center;
    transition: 0.4s;
}

div.loginForm div.backButton:hover {
    opacity: 1;
}

div.formContainer.createAccount {
    display: none;
}

div.formContainer.resetPassword {
    display: none;
}

div.loginForm div.spinner {
    display: none;
}

input.error {
    box-shadow: 0 0 5px #DD4444;
}

div.errorText {
    height: 20px;
    margin-top: -6px;
    text-align: left;
    color: #DD5555;
    font-size: 14px;
}

div.formContainer>div.formContainerMessage {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgba(33,33,33,0.8);
    z-index: 5;
}

div.formContainer>div.formContainerMessage>span {
    position: absolute;
    display: inline;
    top: 45%;
    font-size: 16px;
    font-weight: bold;
    text-shadow: 0 0 5px #666;
    left: 0;
    right: 0;
    bottom: 0;
    color: #fff;
}

/* ^ LOGIN PAGE ^ */

/* ^ MENU PAGE ^ */

div.logoTopBar>img.menuBars {
    height: 30px;
    position: absolute;
    margin-top: 10px;
    vertical-align: top;
    right: 8px;
    opacity: 0.9;
    display: none;
    cursor: pointer;
}

div#sidebar {
    height: 100%;
    width: 0;
    position: absolute;
    right: 0;
    background: rgba(255,255,255,0.9);
    box-shadow: -2px 0px 0px 0px rgba(0,0,0,0.2);
    text-align: center;
    overflow: hidden;
}

div#sidebar>div.profilePicture {
    height: 160px;
    width: 160px;
    margin-top: 10px;
    display: inline-block;
    background: #333;
    border-radius: 100px;

}

div.profilePicture>img.displayPicture {
    height: 100%;
    width: 100%;
    border-radius: 100px;
}

div.friendsListContainer {
    height: 30%;
    width: 100%;
    position: absolute;
    bottom: 0;
    background: pink;
    overflow-y: scroll;
}

div.friendsListContainer>ul.friendsList {
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
    list-style: none;
}

ul.friendsList>li.friend {
    height: 40px;
    line-height: 40px;
    width: 100%;
    text-align: left;
}

li.friend>img.friendImage {
    height: 30px;
    border-radius: 30px;
    margin-top: 5px;
    margin-left: 5px;
}

ul.friendsList>li.friend>span {
    height: 40px;
    line-height: 40px;
    display: inline-block;
    vertical-align: top;
    margin-left: 12px;
}

div#sidebar>div.sidebarRooms {
    height: 36px;
    line-height: 36px;
    width: 190px;
    margin-left: 10px;
    margin-top: 24px;
}

div.sidebarRooms>div.createJoinRoom {
    height: 100%;
    width: 90%;
    margin-left: 5%;
}

div.createJoinRoom>input.roomInput {
    height: 100%;
    width: 100%;
    display: inline-block;
    border-radius: 5px;
    text-align: center;
    font-size: 14px;
    margin-bottom: 10px;
    border: none;
}

div.createJoinRoom>input.roomInput.createJoinButton {
    background: #BBB;
    cursor: pointer;
    transition: 0.4s;
}

div.createJoinRoom>input.roomInput.createJoinButton:hover {
    background: #999;
}

div.logoTopBar>span.usernameGreeting {
    height: 50px;
    line-height: 50px;
    display: inline-block;
    font-size: 18px;
    vertical-align: top;
}

div.menuContent {
    height: 100%;
    width: auto;
    margin-right: 210px;
}

div.menuContent>div.chatColumn {
    height: 100%;
    width: 45%;
    display: inline-block;
}

/* ^ MENU PAGE ^ */

/* v CHAT WINDOWS v */

div.chatWindow {
    height: 600px;
    width: 500px;
    position: absolute;
    opacity: 0.95;
    cursor: move;
}

div.chatWindow.active {
    z-index: 5;
}

div.chatHeader {
    height: 36px;
    line-height: 36px;
    width: 100%;
    font-size: 17.5px;
    font-weight: bold;
    color: #DDD;
    border-radius: 5px;
    background: rgba(22,22,22,1);
    box-shadow: 0px 0px 1px 0px rgba(120,120,120,0.8);
}

div.chatHeader>span {
    margin-left: 16px;
}

div.chatHeader>div.closeChat {
    height: 28px;
    width: 28px;
    position: absolute;
    font-size: 30px;
    right: 4px;
    top: 4px;
    background-image: url('http://urban-chalet.com/img/layout/thin-x.png');
    background-size: contain;
    background-repeat: no-repeat;
    cursor: pointer;
}

ul.chatLog {
    height: 516px;
    width: 100%;
    background: #eee;
    list-style: none;
    margin: 0;
    padding: 0;
    margin-bottom: 2px;
    margin-top: 2px;
    border-radius: 5px;
    overflow-y: scroll;
}

ul.chatLog>li.message {
    height: 34px;
    line-height: 34px;
    width: 100%;
}

ul.chatLog>li.message>span {
    display: inline-block;
    margin-left: 12px;
    width: 488px;
    white-space: nowrap;
}

ul.chatLog>li.message span.username {
    font-weight: bold;
}

ul.chatLog>li.message.consoleMessage {
    background: rgba(99,99,99,0.4);
    text-align: center;
}

ul.chatLog>li.message.consoleMessage.numUsers {
    width: 500px;
    position: absolute;
    background: rgba(33,33,33,0.8);
    color: #DDD;
    font-weight: 600;
}

ul.chatLog>li.message.consoleMessage.numUsers+li {
    margin-top: 34px;
}

ul.chatLog>li.message.consoleMessage>span {
    margin-left: 0;
}

div.messageInputDiv {
    height: 44px;
    width: 100%;
}

div.messageInputDiv>input {
    height: 44px;
    border: none;
    margin: 0;
    padding: 0;
    outline: none;
    background: #EEE;
    border-radius: 5px;
    vertical-align: top;
}

div.messageInputDiv>input.messageInput.message {
    width: 438px;
    padding-left: 12px;
    font-size: 14px;
}

div.messageInputDiv>input.messageInput.send {
    width: 46px;
    height: 44px;
    margin-left: 4px;
    font-size: 22px;
    cursor: pointer;
}

/* ^ CHAT WINDOWS ^ */

/* Spin Kit CSS @tobiasahlin */

.spinner {
    width: 50px;
    height: 40px;
    text-align: center;
    font-size: 10px;
    position: absolute;
    top: 280px;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

.spinner > div {
    background-color: #4CB5F5;
    background-position: center center;
    background-size: cover;
    height: 100%;
    width: 6px;
    display: inline-block;
    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
    animation: sk-stretchdelay 1.2s infinite ease-in-out;
}

.spinner .rect2 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.spinner .rect3 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

.spinner .rect4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.spinner .rect5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

@-webkit-keyframes sk-stretchdelay {
  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
  20% { -webkit-transform: scaleY(1.0) }
}

@keyframes sk-stretchdelay {
  0%, 40%, 100% { 
    transform: scaleY(0.4);
    -webkit-transform: scaleY(0.4);
  }  20% { 
    transform: scaleY(1.0);
    -webkit-transform: scaleY(1.0);
  }
}


/* Spin Kit CSS @tobiasahlin */

